wip: create file separations

--- a/views/movies/index.ejs
+++ b/views/movies/index.ejs
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link href="css/style.css" rel="stylesheet" >
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script defer src="./js/script.js"></script>
+    <script defer src="/js/script.js"></script>
     <title>House of Ghibili</title>
 </head>
 <body>
