wip: create show page

--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script defer src="/js/script.js"></script>
     <title>Film Details</title>
 </head>
 <body>
-    <h1>Here are your details from "insert title here"</h1>
+    <h1>Here are your details from  </h1>
     
 </body>
 </html>
