wip: create show function

--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href="/css/style.css" rel="stylesheet" >
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script defer src="/js/script.js"></script>
-    <title>Film Details</title>
+    <title>House of Ghibili Film Details</title>
 </head>
 <body>
-    <h1>Here are your details from  </h1>
+
+    <h1 id="filmTitle" value='<%= postId %>'><%= postId %></h1>
+    <div id="specificFilm"></div>
     
 </body>
 </html>
