wip: logs sepecific details on show

--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -19,7 +19,8 @@
 <body>
 
     <h1 id="filmTitle" value='<%= postId %>'><%= postId %></h1>
-    <div id="specificFilm"></div>
+    <div id="specificFilm">
+    </div>
     
 </body>
 </html>
