--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -20,6 +20,33 @@
 
     <div id="specificFilm">
     </div>
-    
+
+    <% if(review.length) { %>
+        <table>
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Review</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% review.reviews.forEach(function(r){ %>
+                    <tr>
+                        <td><%= r.createdAt.toLocaleDateString() %></td>
+                        <td><%= r.content %></td>
+                    </tr>
+            <% }); %>
+            </tbody>
+        </table>
+    <% } else { %>
+        <h5>No reviews yet</h5>
+   <% } %>
+
+   <h2>Reviews</h2>
+   <form id="add-comment-form" method="POST" action="/movies/show/<%= postId %>">
+     <label>Review:</label>
+     <textarea name="content"></textarea>
+     <input type="submit" value="Add Review">
+   </form>
 </body>
 </html>
