--- a/views/main.ejs
+++ b/views/main.ejs
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+    
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href=".././public/css/style.css" rel="stylesheet" >
     <title>Welcome to House of Ghibili</title>
 </head>
-<body>
+<body id="enter-page">
     <h1>Welcome to House of Ghibili</h1>
     <a id = "link" href="movies/index">View films</a>
 </body>
