--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -21,7 +21,7 @@
     <div id="specificFilm">
     </div>
 
-    <% if(review.length) { %>
+    <% if(reviews.length) { %>
         <table>
             <thead>
                 <tr>
@@ -30,7 +30,7 @@
                 </tr>
             </thead>
             <tbody>
-                <% review.reviews.forEach(function(r){ %>
+                <% reviews.forEach(function(r){ %>
                     <tr>
                         <td><%= r.createdAt.toLocaleDateString() %></td>
                         <td><%= r.content %></td>
@@ -48,5 +48,13 @@
      <textarea name="content"></textarea>
      <input type="submit" value="Add Review">
    </form>
+   <div id="show-container">
+    <% reviews.forEach(function(review){ %>
+      <p><%= review.content %></p>
+      <form action="<%=reviews._id %>?_method=DELETE" method="POST">
+        <button class="btn btn-outline-secondary btn-sm" type="submit">delete</button>
+      </form>
+    <% }) %>
+  </div>
 </body>
 </html>
