--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,7 +9,7 @@
     
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <link href=".././public/css/style.css" rel="stylesheet" >
+    <link href="css/style.css" rel="stylesheet" >
     <title>Welcome to House of Ghibili</title>
 </head>
 <body id="enter-page">
